# A2rchi

./: .gitignore  .pyproject.toml.swp  404.html  CLAUDE.md  Dockerfile  GETTING-STARTED.md  LICENSE  README.md  SETUP.md  advanced_setup_deploy.html  api_reference.html  app.py  chain.py  cleanup.sh  deep_cleanup.sh  developer_guide.html  environment.yml  index.html  initsql-templater.py  install.html  install.sh  pyproject.toml  pytest.ini  queries.json  quickstart.html  requirements.txt  scraper.py  search.html  setup.py  setup.sh  test_langchain.py  user_guide.html
.github/workflows/: ci-cd.yaml  deploy-docs.yml  dev-ci-cd.yaml  integration-tests.yml  pr-preview.yml  prod-65830-ci-cd.yaml  prod-801-ci-cd.yaml  prod-ROOT-ci-cd.yaml  prod-ci-cd.yaml  prod-meta-ci-cd.yaml  prod-root-ci-cd.yaml  publish-base-images.yml  release-docker.yml  test-and-build-tag.yml  test.yml  tmp-prod-801-ci-cd.yaml
A2rchi/app/: app.py  schema.sql  user.py
A2rchi/chains/: base.py  chain.py  models.py  prompts.py
A2rchi/interfaces/: chat_app.py  cleo.py  standalone.py
A2rchi/utils/: config_loader.py  data_manager.py  imap.py  mailbox.py  scraper.py  sender.py  sql.py
a2rchi/benchmarksrc/: benchmark.py
a2rchi/chains/: a2rchi.py  base.py  chain.py  chain_wrappers.py  chains.py  models.py  pipelines.py  prompts.py  retrievers.py  workflows.py
a2rchi/cli/: cli_main.py  service_registry.py
a2rchi/interfaces/: cleo.py  mattermost.py  piazza.py  redmine.py
a2rchi/templates/: base-compose.yaml  base-config.yaml  base-init.sql
a2rchi/utils/: anonymizer.py  config_loader.py  data_manager.py  embedding_utils.py  env.py  get_docs.py  git_scraper.py  imap.py  jira.py  logging.py  mailbox.py  redmine_tickets.py  scraper.py  sender.py  sql.py  sso_scraper.py  ticket_manager.py
about/: index.html
advanced_setup_deploy/: index.html
api_reference/: index.html
base-pytorch-image/: Dockerfile
benchmarking_configs/: example_conf.yaml  example_conf2.yaml  example_conf3.yaml  example_conf4.yaml
chains/: base.py  chain.py  models.py
config/: 801-textbook.list  a2rchi_source.list  cleo-template  config.yaml  dev-config.yaml  imap-template  prod-65830-config.yaml  prod-65830-docs.list  prod-801-config.yaml  prod-ROOT-config.yaml  prod-config.yaml  prod-meta-config.yaml  prod-root-config.yaml  root-docs.list  root-forum.list  root-tutorial.list  salt-template  sender-template  submit.list
config/prompts/: 65830.prompt  ROOT.prompt  meta.prompt  root.prompt  summary.prompt
configs/: 801-textbook.list  cern.list  cms_minimal_config.yaml  dsrf-test-gpu.yaml  example_conf.yaml  grading-test.yaml  grading_example.yaml  lpc_minimal_config.yaml  miscellanea.list  prod_801.yaml  prod_8511.yaml  prod_submit.yaml  prod_submit_gpu.yaml  ssher_test.yaml  submit.list  test_VLLM.yaml  wisdqm.list  wisdqm.yaml
configs/benchmarking/: queries.json
configs/benchmarking_configs/: example_conf.yaml  example_conf2.yaml  example_conf3.yaml  example_conf4.yaml  ppc.list
configs/pr_preview_config/: pr_preview_config.yaml
configs/prompts/: 801.prompt  8511.prompt  condense.prompt  fasrc.prompt  fasrc_condense.prompt  fasrc_main.prompt  grading_analysis.prompt  grading_final_grade.prompt  (+4 more)
conversational_retrieval_and_subMIT_help/: __init__.py  base.py  prompts.py
deploy/: compose.yaml  create_secret.sh  dev-compose.yaml  dev-install.sh  dev-stop.sh  init.sql  install.sh  prod-compose.yaml  prod-install.sh  prod-stop.sh  run_chat.sh  ssh_config  test.sh
developer_guide/: index.html
developers/: index.html
discourse/: discourse_interface.py
display_benchmarks/: display_functions.py  requirements.txt  test.py
docs/: adding_documents.md  cli.md  mkdocs.yml
getting_started/: index.html
install/: index.html
interfaces/: chat_app.py  cleo.py  standalone.py  uploader_app.py
overview/: index.html
plots/: benchmark_handler.ipynb  benchmark_handler_functions.py
quickstart/: index.html
requirements/: cpu-requirementsHEADER.txt  gpu-requirementsHEADER.txt  requirements-base.txt  requirements-test.txt
scripts/: rebuild_and_push_docker_images.sh
search/: search_index.json
test/: README.md  run_integration_tests.sh  test_chains.py  test_interfaces.py  test_mailbox.py
tests/: README.md  conftest.py
tutorial_helpers/: README.md  initsql-templater.py  setup_heavynode.tcsh
user_guide/: index.html
users_guide/: index.html
utils/: config_loader.py  data_manager.py  embedding_utils.py  imap.py  mailbox.py  scraper.py  sender.py
(+400 files in other folders)
