[project]
name = "a2rchi"
version = "1.1.0"
description = "An AI Augmented Research Chat Intelligence (A2rchi)"
requires-python = ">=3.7"
authors = [
    {name="Pietro Lugato", email="pmlugato@mit.edu"},
    {name="Julius Heitkoetter", email="juliush@mit.edu"},
    {name="Tim Kraska", email="kraska@mit.edu"},
    {name="Christoph Paus", email="paus@mit.edu"},
    {name="Matthew Russo", email="mdrusso@mit.edu"}
]
dependencies = [
    "pyyaml==6.0.1",
    "click==8.1.7",
    "jinja2==3.1.3",
    "requests==2.31.0",
    "podman-compose==1.4.0",
    "python-dotenv>=0.19.0",
    "mkdocs",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "matplotlib==3.10.6",
    "pandas==2.3.2"
]

[project.scripts]
a2rchi = "a2rchi.cli.cli_main:main"

[tool.setuptools.package-data]
a2rchi = ["cli/templates/*", "cli/templates/grafana/*"]

[tool.setuptools]
packages = [
    "a2rchi",
    "a2rchi.bin",
    "a2rchi.cli",
    "a2rchi.cli.utils",
    "a2rchi.cli.managers",
    "a2rchi.cli.templates",
    "a2rchi.cli.templates.grafana",
    "a2rchi.chains",
    "a2rchi.chains.utils",
    "a2rchi.interfaces",
    "a2rchi.interfaces.chat_app",
    "a2rchi.interfaces.uploader_app",
    "a2rchi.interfaces.grader_app",
    "a2rchi.utils",
]
include-package-data = true 

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/mit-submit/A2rchi"
